syntax = "proto3";
package pb;
option go_package = "github.com/mauleyzaola/maupod/src/server/pb";
import "google/protobuf/timestamp.proto";
import "media.proto";

enum Message {
    MESSAGE_ARTWORK_EXTRACT = 0;
}


message ArtworkExtractInput {
    Media media = 1;
    google.protobuf.Timestamp scan_date = 2;
}